--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
         <section class="2nd-hero">
             <div class="hero-floating-section">
                 <div class="floating-circles">
-                  <img src="images/images (2).jpeg" alt="Floating Drum 1" class="floating-circle" />
                   <img src="images/images (3).jpeg" alt="Floating Drum 2" class="floating-circle" />
-                  <img src="images/drum@.jpeg" alt="Floating Drum 3" class="floating-circle" />
-                  <img src="images/tight_head_pastic_drums.png" alt="Floating Drum 4" class="floating-circle" />
                 </div>
               </div>
               
@@ -190,7 +187,7 @@
                     <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://whatsapp.com" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://wa.me/2347067826172" target="_blank"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
     
