--- a/index.html
+++ b/index.html
@@ -59,23 +59,11 @@
         </section>
 
 
-        <section class="2nd-hero">
-            <div class="hero-floating-section">
-                <div class="floating-circles">
-                  <img src="images/images (3).jpeg" alt="Floating Drum 2" class="floating-circle" />
-                </div>
-              </div>
-              
-
-
-        </section>
-
-
 <section id="grid-section">
     <h2>Explore Our Services</h2>
     <div class="grid">
         <div class="grid-item">
-            <img class="ex" src="images/strength.jpg" alt="Drum Durability">
+            <img src="images/images (3).jpeg" alt="Drum Durability">
             <h3>Durable Drums</h3>
             <p>Our drums are designed to last for years, even in the toughest conditions.</p>
         </div>
