--- a/products.html
+++ b/products.html
@@ -56,21 +56,33 @@
                         <img src="images/images (2).jpeg" alt="Product 1">
                         <h3>200L Blue Drum</h3>
                         <p>Durable and suitable for various industrial uses.</p>
-                        <button>View Details</button>
+                        <button>Order Now</button>
+                        <a href="https://wa.me/2347067826172" target="_blank" style="display: flex; align-items: center; text-decoration: none; color: inherit;">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Icon" style="width: 24px; height: 24px; margin-right: 8px;">
+                            Contact us on WhatsApp
+                        </a>
                     </div>
                     <!-- Product Item 2 -->
                     <div class="product-item">
                         <img src="images/images (3).jpeg" alt="Product 2">
                         <h3>200L Blue Drum</h3>
                         <p>Perfect for bulk storage needs and eco-friendly.</p>
-                        <button>View Details</button>
+                        <button>Order Now</button>
+                        <a href="https://wa.me/2347067826172" target="_blank" style="display: flex; align-items: center; text-decoration: none; color: inherit;">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Icon" style="width: 24px; height: 24px; margin-right: 8px;">
+                            Contact us on WhatsApp
+                        </a>
                     </div>
                     <!-- Product Item 3 -->
                     <div class="product-item">
                         <img src="images/510+JiEAnHL._AC_UF350,350_QL80_FMwebp_.webp" alt="Product 3">
                         <h3>200L Blue Drum</h3>
                         <p>Heavy-duty drum for large-scale manufacturing.</p>
-                        <button>View Details</button>
+                        <button>Order Now</button>
+                        <a href="https://wa.me/2347067826172" target="_blank" style="display: flex; align-items: center; text-decoration: none; color: inherit;">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Icon" style="width: 24px; height: 24px; margin-right: 8px;">
+                            Contact us on WhatsApp
+                        </a>
                     </div>
                     <!-- Add more product items as needed -->
                 </div>
@@ -109,7 +121,7 @@
                     <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://whatsapp.com" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://wa.me/2347067826172" target="_blank"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
     
