--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
                     <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://whatsapp.com" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://wa.me/2347067826172" target="_blank"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
     
