--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="ceo-section">
         <h2>Message from the CEO</h2>
         <div class="ceo-message">
-            <img src="images/my passport.jpg" alt="CEO Image">
+            <img src="images/my passport.jpg" alt="CEO Image" style="pointer-events: none;">
             <p>
                 "Welcome to Drum.com, where quality meets reliability. Our mission is to support industries 
                 like yours by providing top-notch packaging solutions that stand the test of time. We look forward 
